--- a/styles.css
+++ b/styles.css
@@ -9,25 +9,24 @@ body {
   text-align: center;
   font-family: 'Roboto', sans-serif;
   color: #222;
-  background: #f7f5f0;
 }
 /* Link Styles */
 
 a {
   text-decoration: none;
-  color: #0499ff;
-}
-a:hover {
-  color: #6633ff;
+  color: white;
 }
 
+.link{
+  color:#0399ff;
+}
 /* Section Styles */
 
 .main-nav {
   width: 100%;
-  background: black;
-  min-height: 30px;
-  padding: 10px;
+  background: #3B3B3B;
+  min-height: 25px;
+  padding: 5px;
   position: fixed;
   text-align: center;
 }
@@ -36,25 +35,30 @@ a:hover {
   justify-content: space-around;
   font-weight: 700;
   list-style-type: none;
-  margin: 0 auto;
-  padding: 0;
+  padding: 100;
+  margin-bottom: 1px;
 }
-.nav .name {
-  display: none;
+.nav .logo {
+  width: 30px;
+  height: 30px;
+  transition: all .25s;
 }
 .nav li {
-  padding: 5px 10px 10px 10px;
+  padding: 5px;
+  transition: all .5s;
+}
+.nav li:hover{
+  transform: scale(1.1);
 }
 .nav a {
   transition: all .5s;
 }
 .nav a:hover {
-  color: white
+  color: grey
 }
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -69,12 +73,19 @@ header .profile-image {
   border-radius: 50%;
   border: 3px solid white;
   transition: all .5s;
+  object-fit: cover;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.2) rotate(30deg);
+}
+
+.title{
+  margin-top: 50px;
+  margin-left: 50px;
+  text-align:left;
 }
 .tag {
-  background-color: #efefef;
+  background: transparent;
   color: black;
   padding: 10px;
   border-radius: 5px;
@@ -82,20 +93,56 @@ header .profile-image:hover {
   margin: 10px auto;
 }
 .location {
-  background-color: #222;
-  color: yellow;
+  background: transparent;
+  color: black;
 }
 .card {
-  margin: 30px;
-  padding: 20px 40px 40px;
-  max-width: 500px;
-  text-align: left;
-  background: #fff;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  padding: 5px 20px;
+  max-width: 1000px;
+  text-align: center;
+  background: #F8F9F9;
   border-bottom: 4px solid #ccc;
-  border-radius: 6px;
+  border-right: 4px solid #ccc;
+  border-radius: 10px;
+  transition: 0.25s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: #3B3B3B;
+}
+.contact {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  padding: 5px 20px;
+  max-width: 1000px;
+  text-align: left;
+  background: #F8F9F9;
+  border-bottom: 4px solid #ccc;
+  border-right: 4px solid #ccc;
+  border-radius: 10px;
+  transition: 0.25s;
+}
+.contact:hover {
+  border-color: #3B3B3B;
+}
+.collection {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  padding: 5px 20px;
+  max-width: 1000px;
+  text-align: center;
+  background: white;
+  border-bottom: 4px solid #ccc;
+  border-right: 4px solid #ccc;
+  border-radius: 10px;
+  transition: 0.25s;
+}
+.collection:hover {
+  border-color: #3B3B3B;
 }
 
 ul.skills {
@@ -110,6 +157,10 @@ ul.skills {
   color: white;
   padding: 5px 10px;
   margin: 2px;
+  transition: 0.25s
+}
+.skills li:hover{
+    transform: scale(1.2);
 }
 
 .skills li:nth-child(odd) {
@@ -123,9 +174,10 @@ footer {
 }
 
 footer .copyright {
-  top: -8px;
+  top: 8px;
   margin-right: 20px;
   font-size: .75em;
+  color: black;
 }
 
 footer ul {
@@ -136,8 +188,11 @@ footer ul {
 
 footer ul li {
   display: inline-block;
+  transition: 0.25s;
 }
-
+footer ul li:hover{
+    transform: scale(1.2) rotate(10deg);
+}
 a.social {
   display: inline-block;
   text-indent: -9999px;
@@ -145,17 +200,24 @@ a.social {
   width: 30px;
   height: 30px;
   background-size: 30px 30px;
-  opacity: .5;
+  opacity: 0.7;
   transition: all .25s;
 }
 a.twitter {
-  background-image: url(images/twitter.svg);
+  background-image: url("images/twitter.jpg");
+  border-radius: 15px;
 }
 a.linkedin {
-  background-image: url(images/linkedin.svg);
+  background-image: url("images/linkedin.jpg");
+  border-radius: 15px;
 }
 a.github {
-  background-image: url(images/github.svg);
+  background-image: url("images/github.jpg");
+  border-radius: 15px;
+}
+a.instagram {
+  background-image: url("images/instagram.jpg");
+  border-radius: 15px;
 }
 a.social:hover {
   opacity: 1;
